<resources>
    <string name="app_name">ThedaResume</string>

    <string name="heading">My Resume</string>
    <string name="myname">Theda K. Rogers</string>
    <string name="emailText">Contact Me</string>
    <string name="education">Education</string>
    <string name="technological_computer_skills">Technological/Computer Skills</string>
    <string name="the_fun_stuff">The fun stuff!</string>
    <string name="professional_writing_and_editing_experience">Professional Writing and Editing Experience</string>
    <string name="other_work_experience">Other Work Experience</string>


</resources>
