<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/heading"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/myName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/myname"
            android:textSize="20sp" />

        <Button
            android:id="@+id/emailButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/emailText" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/education"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/education" />

        <Button
            android:id="@+id/skills"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/technological_computer_skills" />

        <Button
            android:id="@+id/writing_experience"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/professional_writing_and_editing_experience" />

        <Button
            android:id="@+id/other_experience"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/other_work_experience" />

        <Button
            android:id="@+id/fun_stuff"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/the_fun_stuff" />


    </LinearLayout>

</LinearLayout>